--- a/package.json
+++ b/package.json
@@ -7,11 +7,35 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@haskkor/react-native-pincode": "^1.22.6",
+    "@react-native-async-storage/async-storage": "^1.22.0",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-move": "^6.5.0",
+    "react-native": "0.73.4",
+    "react-native-keychain": "^8.1.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-mmkv": "^2.12.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-switch-selector": "^2.3.0",
+    "react-native-touch-id": "^4.4.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,6 +47,7 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-logger": "^3.0.13",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
